--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ neural networks/cnn/.DS_Store
 feature engineering/.DS_Store
 neural networks/.DS_Store
 neural networks/cnn/.DS_Store
+distro_no_scaled.png
+distro_no_scaled.png
+distro_scaled.png
+distro_no_scaled.png
+distro_no_scaled.png
