--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 neural networks/cnn/.DS_Store
 neural networks/.DS_Store
-neural networks/cnn/.DS_Store
 .DS_Store
 feature engineering/.DS_Store
 neural networks/.DS_Store
 neural networks/cnn/.DS_Store
 distro_no_scaled.png
 distro_scaled.png
+feature engineering/.DS_Store
